Script Nav Header

--- a/server/views/index/index.pug
+++ b/server/views/index/index.pug
@@ -146,3 +146,5 @@ block contenido
                 div(class="parrafo")
                     img(id="footer-img" src="/Imagenes/footer-img-face.png" alt="Imagen RICK")
                     p(id="footer-parrafo") Cristian Hernandez | Análista de desarrollo - Técnico profesional en programación de software.
+        script(src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous")
+        script(src="./script.js")
