Include script.js

--- a/server/views/index/index.pug
+++ b/server/views/index/index.pug
@@ -147,4 +147,5 @@ block contenido
                     img(id="footer-img" src="/Imagenes/footer-img-face.png" alt="Imagen RICK")
                     p(id="footer-parrafo") Cristian Hernandez | Análista de desarrollo - Técnico profesional en programación de software.
         script(src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous")
-        script(src="./script.js")
+        script 
+            include script.js
