Cambios => Put icon.ico

--- a/server/views/layout/index.pug
+++ b/server/views/layout/index.pug
@@ -3,7 +3,8 @@ html
     head
         link(rel="stylesheet" href="/Estilos/styles.css")
         meta(charset="utf-8")
-        title CH | Full Stack
+        link(rel="shortcut icon" href="/Estilos/favicon.ico" type="image/x-icon")
+        title CH | Cristian Hernandez
 
         link(href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet")
         link(href="https://fonts.googleapis.com/css?family=Bungee+Shade&display=swap" rel="stylesheet" )
