--- a/server/views/index/index.pug
+++ b/server/views/index/index.pug
@@ -121,9 +121,9 @@ block contenido
                     h3 Contacto              
                     if(errores)
                         each error in errores
-                            p=error.mensaje
+                            p(id="validaciones-form")=error.mensaje
                     form(action="/" method="POST")                              
-                        input(id="nombre" type="text" placeholder="Nombre" name="nombre", value=nombre onchange:validar(e))                   
+                        input(id="nombre" type="text" placeholder="Nombre" name="nombre", value=nombre)                   
                         input(id="correo" type="text" placeholder="Correo electrónico" name="correo", value=correo)                    
                         textarea#mensaje(placeholder="Mensaje" name="mensaje")=mensaje
                         input(type="submit" value="ENVIAR MENSAJE")
