--- a/public/Estilos/styles.css
+++ b/public/Estilos/styles.css
@@ -384,9 +384,7 @@ textarea {
   font-size: 15px;
   font-family: 'Bungee Shade', cursive;
   color: black;
-  display: flex;
-  margin-left: 560px;
-  text-align: center;
+  margin: auto;
   background: #f57373;
   padding: 5px 10px;
   width: 200px;
