Cambios => redireciona al inicio desde el nombre

--- a/server/views/index/index.pug
+++ b/server/views/index/index.pug
@@ -5,7 +5,8 @@ block contenido
         header
             div(class="menu")
                 div(class="contenedor")
-                    p(class="logo") CRISTIAN HERNANDEZ
+                    a(href="/")
+                        p(class="logo") CRISTIAN HERNANDEZ           
                     img(class="menu-icon" src="/Imagenes/menu.png" alt="")
                     nav
                         ul(class="lista-menu")
