--- a/server/views/index/index.pug
+++ b/server/views/index/index.pug
@@ -34,8 +34,7 @@ block contenido
                             img(src="/Imagenes/gifIdea.gif" alt="")
                         div(class="texto")
                             p Mi nombre es Cristian y tengo 19 años, soy chico joven y apasionado por colocar en marcha mis ideas, habitualmente me enfoco en la constante actualización de conocimientos además de mantener conversaciones con otras personas que me ayuden a mejorar habilidades en mi crecimiento profesional.
-                            p Me dedico actualmente al desarrollo de software como programador web, empleando las últimas tecnologías JavaScript con uno de sus frameworks React JS, además del manejo de Wordpress, HTML y CSS3. En mi entorno uso manejadores de paquetes y repositorios en la nube GitHub, además de hacer deployment a servidores online para qué pueda visualizar el trabajo que se desarrolla. Si estas buscando hacer una página web con las últimas tecnologías realmente brillante, funcional y a tu gusto entonces llegaste al lugar correcto.        
-                            p Podrás ponerte en contacto conmigo a través de mi correo electrónico o completando el formulario de contacto aquí mismo en mi página web, yo me encargo del resto.
+                            p Me dedico actualmente al desarrollo de software como programador web, empleando las últimas tecnologías Node JS, JavaScript y frameworks como React JS y Electron, además del manejo de base de datos MySQl y MongoDB. En mi entorno uso manejadores de paquetes y repositorios en la nube GitHub, además de hacer deployment a servidores online para qué pueda visualizar el trabajo que se desarrolla. Si estas buscando hacer una página web con las últimas tecnologías realmente brillante, funcional y a tu gusto entonces llegaste al lugar correcto.                                    
                             a(href="#mis-trabajos") VER MIS TRABAJOS
             section(id="servicios")
                 div(class="contenedor")
