--- a/server/layout/index.pug
+++ b/server/layout/index.pug
@@ -8,7 +8,7 @@ html(lang="en")
         href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css')
         link(rel='stylesheet' href="https://use.fontawesome.com/releases/v5.6.3/css/all.css")
         link(href='https://fonts.googleapis.com/css?family=Covered+By+Your+Grace|Open+Sans:400,700|Staatliches&display=swap', rel='stylesheet')
-        link(rel="stylesheet", href="/css/style.css")
+        link(rel="stylesheet", href="/Estilos/styles.css")
     body(class=clase)
         include includes/header
         block slider
