--- a/server/views/index/index.pug
+++ b/server/views/index/index.pug
@@ -33,10 +33,10 @@ block contenido
                         div(class="imagen-sobremi")
                             img(src="/Imagenes/gifIdea.gif" alt="")
                         div(class="texto")
-                            p(class="text-justify") Mi nombre es Cristian Hernandez y tengo 3 años de experencia programando, soy un apasionado por colocar en marcha mis ideas y por poder plasmar las tuyas, habitualmente me enfoco en la constante actualización de conocimientos que me ayuden a mejorar habilidades en mi crecimiento profesional.
-                            p(class="text-justify") Me dedico actualmente al desarrollo de software como programador web, empleando las últimas tecnologías Node JS, JavaScript y frameworks como React JS y Electron, además del manejo de base de datos MySQl y MongoDB. En mi entorno uso manejadores de paquetes y repositorios en la nube GitHub, además de hacer deployment a servidores online para qué pueda visualizar el trabajo que se desarrolla. 
+                            p(class="p-justify") Mi nombre es Cristian Hernandez y tengo 3 años de experencia programando, soy un apasionado por colocar en marcha mis ideas y por poder plasmar las tuyas, habitualmente me enfoco en la constante actualización de conocimientos que me ayuden a mejorar habilidades en mi crecimiento profesional.
+                            p(class="p-justify") Me dedico actualmente al desarrollo de software como programador web, empleando las últimas tecnologías Node JS, JavaScript y frameworks como React JS y Electron, además del manejo de base de datos MySQl y MongoDB. En mi entorno uso manejadores de paquetes y repositorios en la nube GitHub, además de hacer deployment a servidores online para qué pueda visualizar el trabajo que se desarrolla. 
                             hr
-                            p(class="text-justify") Si estas buscando hacer una página web con las últimas tecnologías, realmente brillante, funcional y a tu gusto entonces llegaste al lugar correcto.                                    
+                            p(class="p-justify") Si estas buscando hacer una página web con las últimas tecnologías, realmente brillante, funcional y a tu gusto entonces llegaste al lugar correcto.                                    
                             a(href="#mis-trabajos") VER MIS TRABAJOS
             section(id="servicios")
                 div(class="contenedor")
@@ -44,27 +44,27 @@ block contenido
                 div(class="contenedor-servicios")
                     div(class="servicio card1")
                         h4 Diseño Web
-                        p(class="text-justify") Páginas web que resalten lo que deseas inspirar, desarrollaré tu idea. La importancia del diseño web es fundamental para tener éxito y atraer a las personas creándole una experencia dentro dentro del sitio.       
+                        p(class="p-justify") Páginas web que resalten lo que deseas inspirar, desarrollaré tu idea. La importancia del diseño web es fundamental para tener éxito y atraer a las personas creándole una experencia dentro dentro del sitio.       
                         img(src="/Imagenes/html-logo.png" alt="" class="icono")
                     div(class="servicio card2")
                         h4 Responsive desing
-                        p(class="text-justify") El diseño web adaptable, es una filosofía de diseño y desarrollo cuyo objetivo es adaptar la apariencia de las páginas web al dispositivo que se esté utilizando para visitarlas.                    
+                        p(class="p-justify") El diseño web adaptable, es una filosofía de diseño y desarrollo cuyo objetivo es adaptar la apariencia de las páginas web al dispositivo que se esté utilizando para visitarlas.                    
                         img(src="/Imagenes/css-logo.png" alt="" class="icono")      
                     div(class="servicio card3")
                         h4 SEO
-                        p(class="text-justify") El posicionamiento en buscadores, optimización en motores de búsqueda es un conjunto de acciones orientadas a mejorar el posicionamiento de un sitio web en la lista de resultados de Google, Bing, u otros buscadores de internet.​                        
+                        p(class="p-justify") El posicionamiento en buscadores, optimización en motores de búsqueda es un conjunto de acciones orientadas a mejorar el posicionamiento de un sitio web en la lista de resultados de Google, Bing, u otros buscadores de internet.​                        
                         img(src="/Imagenes/wordpress-logo.png" alt="" id="wordpress-logo" class="icono")     
                     div(class="servicio card4")
                         h4 Gestión de paquetes
-                        p(class="text-justify") Herramientas esenciales de desarrollo de JavaScript, npm es la herramienta utilizada por más de 11,000,000 desarrolladores de JavaScript en todo el mundo. Sus desarrolladores ya lo usan.                        
+                        p(class="p-justify") Herramientas esenciales de desarrollo de JavaScript, npm es la herramienta utilizada por más de 11,000,000 desarrolladores de JavaScript en todo el mundo. Sus desarrolladores ya lo usan.                        
                         img(src="/Imagenes/npm-logo.png" alt="" id="npm-logo" class="icono")        
                     div(class="servicio card5")
                         h4 Platform as a Service
-                        p(class="text-justify") Heroku es uno de los PaaS más utilizados en la actualidad en entornos empresariales por su fuerte enfoque en resolver el despliegue de una aplicación. Ademas te permite manejar los servidores y sus configuraciones, escalamiento y la administración. A Heroku solo le dices qué lenguaje de backend estás utilizando o qué base de datos vas a utilizar y te preocupas únicamente por el desarrollo de tu aplicación.                        
+                        p(class="p-justify") Heroku es uno de los PaaS más utilizados en la actualidad en entornos empresariales por su fuerte enfoque en resolver el despliegue de una aplicación. Ademas te permite manejar los servidores y sus configuraciones, escalamiento y la administración. A Heroku solo le dices qué lenguaje de backend estás utilizando o qué base de datos vas a utilizar y te preocupas únicamente por el desarrollo de tu aplicación.                        
                         img(src="/Imagenes/heroku-logo.png" alt="" class="icono")
                     div(class="servicio card6")
                         h4 React JS
-                        p(class="text-justify") React es una biblioteca Javascript para crear interfaces de usuario enfocada en la visualización.     
+                        p(class="p-justify") React es una biblioteca Javascript para crear interfaces de usuario enfocada en la visualización.     
                         img(src="/Imagenes/react-logo.png" alt="" class="icono")
             section(id="mis-trabajos")
                 div(class="contendor")
@@ -73,7 +73,7 @@ block contenido
                         div(class="imagen-perfilGith")
                             img(src="Imagenes/perfil-github.PNG" alt="")          
                         div(class="texto")
-                            p(class="text-justify") Te invito a visitar mis repositorios en GitHub donde pordras encontrar los trabajos qué he realizado y los proyectos a los qué he brindado apoyo en su desarrollo.
+                            p(class="p-justify") Te invito a visitar mis repositorios en GitHub donde pordras encontrar los trabajos qué he realizado y los proyectos a los qué he brindado apoyo en su desarrollo.
                             img(src="/Imagenes/github.png" id="gitHubLogo")    
                             a(href="https://github.com/CristianCuartas" target="_blank" id="link-github") Cristian Cuartas
             section(id="por-que-trabajar")
@@ -85,19 +85,19 @@ block contenido
                                 li
                                     img(src="/Imagenes/clock.png")
                                 li Velocidad
-                                li(class="text-justify") Me aseguro de que tu web cargue entre 2 y 4 segundos (depende la cantidad de contenido del sitio). Si una web tarda más de 5 segundos en cargar, el 70% de los usuarios lo cierra y no vuelve a entrar más.
+                                li(class="p-justify") Me aseguro de que tu web cargue entre 2 y 4 segundos (depende la cantidad de contenido del sitio). Si una web tarda más de 5 segundos en cargar, el 70% de los usuarios lo cierra y no vuelve a entrar más.
                         div(class="item-trabajar")
                             ul
                                 li
                                     img(src="/Imagenes/network.png" alt="")
                                 li Asesoramiento
-                                li(class="text-justify") Mantengo una comunicación constante con mi cliente, para enseñarle a modificar contenido mediante el panel de Wordpress o para cualquier duda / cambios que quiera hacer en su sitio web.        
+                                li(class="p-justify") Mantengo una comunicación constante con mi cliente, para enseñarle a modificar contenido mediante el panel de Wordpress o para cualquier duda / cambios que quiera hacer en su sitio web.        
                         div(class="item-trabajar")
                             ul
                                 li
                                     img(src="/Imagenes/smartphone.png" alt="")
                                 li Mobile Priority
-                                li(class="text-justify") Cada vez más personas navegan desde sus celulares en cualquier parte del mundo. Me aseguro de que tu web esté optimizado para cualquier tipo de dispositivo móvil.
+                                li(class="p-justify") Cada vez más personas navegan desde sus celulares en cualquier parte del mundo. Me aseguro de que tu web esté optimizado para cualquier tipo de dispositivo móvil.
             section(id="blog")
                 div(class="contendor")
                     h3 Blog
